Version 2.03.07 - 
===================================
  Fix resize of thin-pool with data and metadata of different segtype.
  Improve mirror type leg splitting.
  Fix activation order when removing merged snapshot.
  Experimental VDO support for lvmdbusd.

Version 2.03.06 - 23rd October 2019
===================================
  Add _cpool suffix to cache-pool LV name when used by caching LV.
  No longer store extra UUID for cmeta and cdata cachevol layer.
  Enhance activation of cache devices with cachevols.
  Add _cvol in list of protected suffixes and start use it with DM UUID.
  Rename LV converted to cachevol to use _cvol suffix.
  Use normal LVs for wiping of cachevols.
  Reload cleanered cache DM only with cleaner policy.
  Fix cmd return when zeroing of cachevol fails.
  Extend lvs to show all VDO properties.
  Preserve VDO write policy with vdopool.
  Increase default vdo bio threads to 4.
  Continue report when cache_status fails.
  Add support for DM_DEVICE_GET_TARGET_VERSION into device_mapper.
  Fix cmirrord usage of header files from device_mapper subdir.
  Allow standalone activation of VDO pool just like for thin-pools.
  Activate thin-pool layered volume as 'read-only' device.
  Ignore crypto devices with UUID signature CRYPT-SUBDEV.
  Enhance validation for thin and cache pool conversion and swapping.
  Improve internal removal of cached devices.
  Synchronize with udev when dropping snapshot.
  Add missing device synchronization point before removing pvmove node.
  Correctly set read_ahead for LVs when pvmove is finished.
  Remove unsupported OPTIONS+="event_timeout" udev rule from 11-dm-lvm.rules.
  Prevent creating VGs with PVs with different logical block sizes.
  Fix metadata writes from corrupting with large physical block size.

Version 2.03.05 - 15th June 2019
================================
  Fix command definition for pvchange -a.
  Add vgck --updatemetadata command that will repair metadata problems.